[tool.poetry]
name = "Sleep-Video-Generator"
version = "0.1.0"
description = ""
authors = ["nomnomnonono <nozomu.koujiguchi1204@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
gradio = "^4.16.0"
moviepy = "^1.0.3"
pydub = "^0.25.1"
opencv-python = "^4.9.0.80"
numpy = "^1.26.3"
openai = "^1.10.0"
omegaconf = "^2.3.0"
pillow = "^10.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pysen = "^0.10.4"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.3.0"
types-requests = "^2.31.0"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py310"

[[tool.pysen.lint.mypy_targets]]
  paths = ["."]

